--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Реализация генетического алгоритма для задачи транспортировки}{Реализация генетического алгоритма для задачи транспортировки}}
+{\texorpdfstring{Проектирование и разработка искусственных нейронных сетей}{Проектирование и разработка искусственных нейронных сетей}}
 \newcommand{\courseName}
 {Современные компьютерные технологии}
 \newcommand{\labNumber}
-{2}
+{3}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
