--- a/LabWork/title.tex
+++ b/LabWork/title.tex
@@ -1,7 +1,7 @@
 % Титульный лист (ГОСТ Р 7.0.11-2001, 5.1)
 \thispagestyle{empty}%
 \begin{center}%
-	\large ФГБОУ ВПО
+	\large ФГБОУ ВО
 	
 	\large \MakeUppercase{\thesisOrganization}
 	\begin{figure}[ht] 
