added result table.

--- a/LabWork/lab2.tex
+++ b/LabWork/lab2.tex
@@ -14,9 +14,10 @@
 		\begin{ListingEnv}[H]
 			\caption{Формирование входных данных}
 			% далее метка для ссылки:
-			\label{list:hwbeauty}
+			\label{list:first}
 			% окружение учитывает пробелы и табляции и приеняет их в сответсвии с настройкми
 			\begin{lstlisting}[language={Matlab}]
+			syms x;
 			f(x) = 0.1 * x^2 - x * log(x);
 			n=1;
 			for i=1.0:+0.1:2.0
@@ -35,7 +36,7 @@
 		\begin{ListingEnv}[H]
 			\caption{Создание сети}
 			% далее метка для ссылки:
-			\label{list:hwbeauty}
+			\label{list:net}
 			% окружение учитывает пробелы и табляции и приеняет их в сответсвии с настройкми
 			\begin{lstlisting}[language={Matlab}]
 			net=newff(minmax(Input),[1,5,1],{'logsig' 'logsig' 'purelin'},'trainlm');
@@ -48,7 +49,7 @@
 		\begin{ListingEnv}[H]
 			\caption{Обучение сети}
 			% далее метка для ссылки:
-			\label{list:hwbeauty}
+			\label{list:training}
 			% окружение учитывает пробелы и табляции и приеняет их в сответсвии с настройкми
 			\begin{lstlisting}[language={Matlab}]
 			net.performFcn='sse';
@@ -70,14 +71,14 @@
 		\FloatBarrier
 		
 	\section{Тестирование}
-		Исследуем степень достоверности результатов вычислений сети на тестовом массиве входных данных. В качестве тестового массива необходимо использовать массив, компоненты которого отличаются от компонентов массива, использованного для обучения.
+		Исследуем степень достоверности результатов вычислений сети на тестовом массиве входных данных. В качестве тестового массива необходимо использовать массив, компоненты которого отличаются от компонентов массива, использованного для обучения. Создадим выборку данных на указанном отрезке размера 101.
 		
 		Для оценки достоверности результатов работы сети можно воспользоваться результатами регрессионного анализа, полученными при сравнении эталонных значений со значениями, полученными на выходе сети, когда на вход поданы входные векторы тестового массива.
 		
 			\begin{ListingEnv}[H]
 			\caption{Формирование тестового массива и тестирование.}
 			% далее метка для ссылки:
-			\label{list:hwbeauty}
+			\label{list:test}
 			% окружение учитывает пробелы и табляции и приеняет их в сответсвии с настройкми
 			\begin{lstlisting}[language={Matlab}]
 			n=1;
@@ -98,3 +99,22 @@
 			\caption{Сравнение результата симуляции с фактическими значениями функции.} 
 		\end{figure}
 		\FloatBarrier
+		
+	\section{Влияние размера обучающей выборки}
+		Исследуем качество обучения сети в зависимости от размера обучающей выборки. Для этого модифицируем шаг в листинге \ref{list:first} для создание сетки с нужным количеством точек на отрезке.
+		
+		\begin{table}[h]
+			\centering
+			\caption{Точность обучения в зависимости от размера обучающей выборки}
+			\label{my-label}
+			\begin{tabular}{|c|c|c|}
+				\hline
+				\textbf{Размер выборки} & \textbf{Количество циклов} & \textbf{Точность} \\ \hline
+				3 & 3 & 0.89 \\ \hline
+				4 & 3 & 0.91 \\ \hline
+				5 & 3 & 0.93 \\ \hline
+				6 & 3 & 0.99 \\ \hline
+			\end{tabular}
+		\end{table}
+			
+		Как видим, для проведения эксперимента достаточно 6 точек.
