Course Work Template Added

--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -27,5 +27,8 @@
 \begin{document}
 	\input{common/renames}                   % Переопределение именований
 	\include{LabWork/title}           % Титульный лист
-	\include{LabWork/lab}
+	\include{LabWork/contents}
+	\include{LabWork/introduction}
+	\include{LabWork/course}
+	\include{LabWork/conclusion}
 \end{document}
