--- a/CourseWork/title.tex
+++ b/CourseWork/title.tex
@@ -1,7 +1,7 @@
 % Титульный лист (ГОСТ Р 7.0.11-2001, 5.1)
 \thispagestyle{empty}%
 \begin{center}%
-	\large ФГБОУ ВПО
+	\large ФГБОУ ВО
 	
 	\large \MakeUppercase{\thesisOrganization}
 	\begin{figure}[ht] 
@@ -19,7 +19,7 @@
 
 \vspace{0pt plus7fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 \begin{center}%
-	\Large\MakeUppercase{Лабораторная работа № \labNumber}
+	\Large\MakeUppercase{Курсовая работа}
 	
 	\large По курсу <<\courseName>>
 	
@@ -36,7 +36,7 @@
 		\raggedleft
 		\parbox{9cm}{% чтобы лучше смотрелось, подбирается самостоятельно
 			\begin{tabular}{  r  l }
-				Группа:	& А-13-12 \\
+				Группа:	& А-13м-16 \\
 				Студент: 	& \thesisAuthorShort \\
 				Преподаватель:	& \supervisorFioShort \\
 			\end{tabular}%
