--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,34 +1,12 @@
 
-{\actuality} 
-Модель анализа включает основные классы, необходимые для реализации выделенных вариантов использования, а также возможные связи между классами. Выделяемые классы разбиваются на три разновидности — интерфейсные, управляющие и классы данных. Эти классы представляют собой набор сущностей, в терминах которых работа системы должна представляться пользователям. Они являются понятиями, с помощью которых достаточно удобно объяснять себе и другим происходящее внутри системы, не слишком вдаваясь в детали.
+{\actuality} Введение в тему работы
 
-Интерфейсные классы соответствуют устройствам или способам обмена данными между системой и ее окружением, в том числе пользователями.
-
-Классы данных соответствуют наборам данных, описывающих некоторые однотипные сущности внутри системы. Эти сущности являются абстракциями представлений пользователей о данных, с которыми работает система.
-
-Управляющие классы соответствуют алгоритмам, реализующим какие-то значимые преобразования данных в системе и управляющим обменом данными с ее окружением в рамках вариантов использования.
-
-Модель проектирования является детализацией и специализацией модели анализа. Она также состоит из классов, но более четко определенных, с более точным и детальным распределением обязанностей, чем классы модели анализа. Классы модели проектирования должны быть специализированы для конкретной используемой платформы. 
-
-Каждая такая платформа может включать:
-\begin{itemize}
-	\item операционные системы всех вовлеченных машин;
-	\item используемые языки программирования;
-	\item интерфейсы и классы конкретных компонентных сред, таких как J2EE, .NET, COM или CORBA;
-	\item интерфейсы выбранных для использования систем управления базами данных, СУБД, например, Oracle или MS SQL Server;
-	\item используемые библиотеки разработки пользовательского интерфейса, такие как Windows Forms, Swing или Swt в Java, MFC, VCL или Gtk;
-	\item интерфейсы взаимодействующих систем и пр.
-\end{itemize}
-
-{\aim} Подготовить модель анализа и проектирования.
+{\aim} Подготовить/реализовать/изучить.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Построить диаграмму классов
-  \item Построить диаграмму последовательности
-  \item Построить диаграмму кооперации
-  \item Построить диаграмму деятельности
-  \item Построить диаграмму состояний
+  \item Задача 1
+  \item Задача 2
 \end{enumerate}
     
 
