Fixed compilation error, displays current year on compilation.

--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -6,7 +6,7 @@
 \input{Dissertation/dispackages}         % Пакеты для диссертации
 \input{Dissertation/userpackages}        % Пакеты для специфических пользовательских задач
 
-\input{LabWork/setup}                    % Упрощённые настройки шаблона
+\input{CourseWork/setup}                    % Упрощённые настройки шаблона
 
 \input{Dissertation/preamblenames}       % Переопределение именований, чтобы можно было и в преамбуле использовать
 \input{common/newnames}  % Новые переменные, которые могут использоваться во всём проекте
@@ -26,9 +26,9 @@
 
 \begin{document}
 	\input{common/renames}                   % Переопределение именований
-	\include{LabWork/title}           % Титульный лист
-	\include{LabWork/contents}
-	\include{LabWork/introduction}
-	\include{LabWork/course}
-	\include{LabWork/conclusion}
+	\include{CourseWork/title}           % Титульный лист
+	\include{CourseWork/contents}
+	\include{CourseWork/introduction}
+	\include{CourseWork/course}
+	\include{CourseWork/conclusion}
 \end{document}
