--- a/common/data.tex
+++ b/common/data.tex
@@ -21,7 +21,7 @@
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
-{2016}
+{\the\year}
 \newcommand{\thesisOrganization}       % Диссертация, организация
 {Национальный исследовательский университет}
 
